# grbl-visualizer

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  GRBL_REFERENCE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
docs/: USER_GUIDE.md  USER_GUIDE_de.md
examples/: circle.gcode  complex_pattern.gcode  simple_square.gcode
scripts/: install_linux.sh  uninstall_linux.sh
src/: __init__.py  main.py
src/analyzer/: __init__.py  analyzer.py  optimizer.py
src/gcode/: __init__.py  commands.py  detection.py  dialects.py  grbl_versions.py  parser.py  tokens.py
src/geometry/: __init__.py  bounds.py  path.py  transforms.py
src/ui/: __init__.py  about_dialog.py  canvas_panel.py  comment_panel.py  editor_panel.py  find_replace_dialog.py  main_window.py  search_service.py  settings_dialog.py  warnings_dialog.py  widgets.py
src/ui/resources/: __init__.py  strings_de.py  strings_en.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_detection.py  test_dialects.py  test_find_replace_dialog.py  test_gcode_commands.py  test_geometry.py  test_parser.py  test_search_service.py  test_ui.py
