[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grbl-visualizer"
version = "0.1.0"
description = "GRBL G-Code Visualizer & Analyzer for CNC Machines"
authors = [{ name = "dasarne" }]
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
